// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aged Brie actually increases in Quality the older it gets 1`] = `
[
  Item {
    "name": "Aged Brie",
    "quality": 21,
    "sellIn": 9,
  },
]
`;

exports[`Once the sell by date has passed, Quality degrades twice as fast 1`] = `
[
  Item {
    "name": "Standard Item",
    "quality": 18,
    "sellIn": -1,
  },
]
`;

exports[`The Quality of an item is never more than 50 1`] = `
[
  Item {
    "name": "Standard Item",
    "quality": 59,
    "sellIn": 9,
  },
]
`;

exports[`The Quality of an item is never negative 1`] = `
[
  Item {
    "name": "Standard Item",
    "quality": 0,
    "sellIn": 9,
  },
]
`;
